Fix the z-index bug on blog cards

--- a/components/BlogFeatureCards/CategoryBlogCard/index.module.scss
+++ b/components/BlogFeatureCards/CategoryBlogCard/index.module.scss
@@ -20,7 +20,7 @@
 		min-height: 14.8rem;
 		max-height: 14.8rem;
 		width: 100%;
-		z-index: 1;
+		z-index: -1;
 		@media only screen and(max-width: 600px) {
 			height: auto;
 		}
