--- a/styles/components/modals.scss
+++ b/styles/components/modals.scss
@@ -1,5 +1,5 @@
 .modal {
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -13,6 +13,8 @@
 	right: 0;
 	bottom: 0;
 	background-color: rgba(#000, 0.5);
+	width: 100%;
+	height: 100%;
 	@media only screen and(max-width: 700px) {
 		display: none;
 		visibility: none;
